--- a/1_grid.html
+++ b/1_grid.html
@@ -13,45 +13,45 @@
             <div class="nav"> Nav </div>
         </div>
         <div class="grid-items two"> 
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, </p>
         </div>
         <div class="grid-items three">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti,</p>
         </div>
 
         <div class="grid-items four">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti,
             </p>
         </div>
 
         <div class="grid-items five">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
 
         <div class="grid-items six">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
 
         <div class="grid-items seven">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
         <div class="grid-items eight">
-            <img src="mini opgaver/placeholder-img.webp" alt="50px">
+            <img src="img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
