--- a/bootstrap_aflevering/1_bootstrap.html
+++ b/bootstrap_aflevering/1_bootstrap.html
@@ -50,15 +50,15 @@
 
     </nav>
 
-    <img src="img/dog-header-mobile.jpg" class="img-fluid d-lg-none d-xl-block" style="padding-bottom: 48px;" alt="">
-    <img src="img/dog-header-desktop.jpg" class="img-fluid d-none d-lg-block d-xl-none" style="padding-bottom: 48px;" alt="">
+    <img src="/flow_5/flow_5/img/dog-header-mobile.jpg" class="img-fluid d-lg-none d-xl-block" style="padding-bottom: 48px;" alt="">
+    <img src="/flow_5/flow_5/img/dog-header-desktop.jpg" class="img-fluid d-none d-lg-block d-xl-none" style="padding-bottom: 48px;" alt="">
    
     <div class="container-fluid">
         <div class="row gy-5">
 
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="img/dog-1.jpg" class="card-img-top" alt="...">
+                    <img src="/flow_5/flow_5/img/dog-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title"> Trofast </h5>
                       <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa animi at, ipsa tempore hic cupiditate veniam repellat?</p>
@@ -69,7 +69,7 @@
 
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="img/dog-2.jpg" class="card-img-top" alt="...">
+                    <img src="/flow_5/flow_5/img/dog-2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title"> Pluto </h5>
                       <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa animi at, ipsa tempore hic cupiditate veniam repellat?</p>
@@ -80,7 +80,7 @@
 
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="img/dog-3.jpg" class="card-img-top" alt="...">
+                    <img src="/flow_5/flow_5/img/dog-3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title"> Joe </h5>
                       <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa animi at, ipsa tempore hic cupiditate veniam repellat?</p>
@@ -91,7 +91,7 @@
             
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="img/dog-4.jpg" class="card-img-top" alt="...">
+                    <img src="/flow_5/flow_5/img/dog-4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title"> Balder </h5>
                       <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa animi at, ipsa tempore hic cupiditate veniam repellat?</p>
