--- a/grid_aflevering/1_grid.html
+++ b/grid_aflevering/1_grid.html
@@ -15,47 +15,47 @@
         </div>
 
         <div class="grid-items two"> 
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, </p>
         </div>
 
         <div class="grid-items three">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti,</p>
         </div>
 
         <div class="grid-items four">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti,
             </p>
         </div>
 
         <div class="grid-items five">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
 
         <div class="grid-items six">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
 
         <div class="grid-items seven">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
         </div>
 
         <div class="grid-items eight">
-            <img src="img/placeholder-img.webp" alt="50px">
+            <img src="/flow_5/flow_5/img/placeholder-img.webp" alt="50px">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Nesciunt deleniti, 
             </p>
